# transactional-storage-framework

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  REUSE.toml
.config/: glossary.dic  glossary.txt  glossary.txt.license  spellcheck.toml
.github/workflows/: sap_tsf.yml  tss.yml
.reuse/: dep5
LICENSES/: Apache-2.0.txt
benches/: access_controller.rs  atomic_counter.rs  monotonic_u64.rs  util.rs
doc/: architecture.md  file_io.md
src/: access_controller.rs  container.rs  data_plane.rs  database.rs  error.rs  janitor.rs  journal.rs  layout.rs  lib.rs  lock_table.rs  logger.rs  metadata.rs  overseer.rs  persistence_layer.rs  record.rs  sequencer.rs  snapshot.rs  storage.rs  task_processor.rs  telemetry.rs  transaction.rs  util.rs  utils.rs  version.rs
src/impl/: atomic_counter.rs  file_logger.rs  mod.rs  record_version.rs  relational_table.rs
src/persistence_layer/file_io/: addressing.rs  database_header.rs  db_header.rs  evictable_page.rs  file_io_task_processor.rs  io_task_processor.rs  log_io_task_processor.rs  log_record.rs  mod.rs  page_header.rs  page_io_task_processor.rs  page_manager.rs  random_access_file.rs  recovery.rs  segment.rs
src/realization/: atomic_counter.rs  file_logger.rs  mod.rs  record_version.rs  relational_table.rs
src/sequencer/: atomic_counter.rs  monotonic_u64.rs
src/tests/: examples.rs
tests/: Cargo.toml
tests/src/: examples.rs  lib.rs
