# SPDX-FileCopyrightText: 2021 Changgyoo Park <wvwwvwwv@me.com>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "tss"
version = "0.1.0"
authors = ["wvwwvwwv <wvwwvwwv@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scc = "^0.5.1"
