# SPDX-FileCopyrightText: 2023 Changgyoo Park <wvwwvwwv@me.com>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "tss"
version = "0.2.0"
authors = ["wvwwvwwv <wvwwvwwv@me.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scc = "1.4"

[dev-dependencies]
futures = "0.3"
tokio = { version = "1.2", features = ["full"] }
