# SPDX-FileCopyrightText: 2023 Changgyoo Park <wvwwvwwv@me.com>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "sap-tsf"
version = "0.2.0"
authors = ["wvwwvwwv <wvwwvwwv@me.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/SAP/transactional-storage-framework"
license = "Apache-2.0"
categories = ["asynchronous", "concurrency", "database-implementations"]
keywords = ["async", "concurrent", "database"]

[dependencies]
scc = "1.4"

[dev-dependencies]
criterion = { version = "0.4", features = ["async_futures"] }
futures = "0.3"
static_assertions = "1.1"
tokio = { version = "1.2", features = ["full"] }

[[bench]]
name = "access_controller"
harness = false
