# SPDX-FileCopyrightText: 2021 Changgyoo Park <wvwwvwwv@me.com>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "tss-tests"
version = "0.1.0"
authors = ["Changgyoo Park <changgyoo.park@sap.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tss = { path = ".." }